<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/whitish">


    <!-- Header -->

    <!-- Fragment container below header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/whitish"


        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-108dp">

        <!-- Logo -->

        <!-- Greeting + name -->

        <ImageView
            android:id="@+id/logo"
            android:layout_width="66dp"
            android:layout_height="60dp"
            android:layout_margin="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/logo_i"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Date + Time -->

        <!-- Profile icon -->

        <!-- Logout button -->

        <TextView
            android:id="@+id/tvGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/andada_pro"
            android:text="@string/header_greeting"
            android:textColor="@color/logo_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/logo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/header_date"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tvGreeting"
            app:layout_constraintTop_toBottomOf="@id/tvGreeting" />

        <ImageView
            android:id="@+id/themeToggle"
            android:layout_width="26dp"
            android:layout_height="29dp"
            android:layout_margin="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="1dp"
            android:contentDescription="Toggle Theme"
            android:src="@drawable/baseline_dark_mode_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/profileIcon"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tvGreeting"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.135" />

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="12dp"
            android:layout_marginTop="12dp"
            android:contentDescription="Profile"
            android:src="@drawable/baseline_account_circle_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="62dp"
            android:layout_height="31dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/transparent"
            android:padding="0dp"
            android:text="@string/log_out"
            android:textColor="@color/btnLogin"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.96"
            app:layout_constraintStart_toEndOf="@+id/profileIcon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"/>

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="0dp"
        app:itemPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:itemBackground="@drawable/nav_item_background"
        app:itemActiveIndicatorStyle="@style/NoActiveIndicator"
        app:menu="@menu/bottom_nav_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>